Issue #4207 - Hide overflow

--- a/assets/_sass/_structure.scss
+++ b/assets/_sass/_structure.scss
@@ -53,6 +53,7 @@ html {
   flex-basis: 0;
   flex-grow: 999;
   color: $gray-darker;
+  overflow: hidden;
 
   #presidium-content {
     position: relative;
